# idaes-dmf

./: pyproject.toml  requirements-dev.txt
.github/workflows/: checks.yml
src/idaes_dmf/: __init__.py  cli.py  conftest.py  datasets.py  dmfbase.py  experiment.py  getver.py  help.py  resource.py  tables.py  userapi.py  workspace.py
src/idaes_dmf/tests/: test_cli.py  test_codesearch.py  test_commands.py  test_datasets.py  test_dmfbase.py  test_experiment.py  test_getver.py  test_help.py  test_magics.py  test_model_data.py  test_relations.py  test_resource.py  test_tables.py  test_util.py  test_workspace.py  util.py
